# Wox.Plugin.KillProcess

./: .gitignore  Makefile  README.md  build.py  plugin.json  pyproject.toml  wox.plugin.killprocess.wox
script/: build.py  release.py
src/: __init__.py  __main__.py  dynamic_deps.py  main.py  process_name_resolver.py
tests/: __init__.py  test_friendly_names.py
