[project]
name = "killprocess"
version = "0.0.2"
description = "Terminate a running process by its name or ID"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wox-plugin==0.0.69",
    "psutil",
    "types-psutil",
    "pyobjc-framework-Cocoa",
    "pyobjc",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.ruff]
line-length = 140
